# Hanacaraka-Aksara-Jawa-Handwriting-Detection

./: .gitignore  LICENSE  README.md  aksara-jawa-letter-classification (1).ipynb  class-indicies.p  main.py  pyproject.toml
model/: class-indicies.pkl
